# wingpanel-indicator-weather

./: CMakeLists.txt  README.md  meson.build
meson/: post_install.py
po/: POTFILES  com.github.camellan.weatherindicator.pot  ru.po
src/: Indicator.vala
src/Widgets/: DisplayWidget.vala
src/lib/: Weather.vala
